  information will be very useful because it will list
  all the strings which were updated or added. If you
  encounter a modified string, please look in the 
  reference (english) file to see if you existing
  translation is still valid and update if appropriate.

  [U] = updated, [+] = added, [-] = removed

  ====================================================

  10-11-2002 - default
    [+] strLaterThan
    [+] strLaterThanOrEqual
    [+] strEarlierThan
    [+] strEarlierThanOrEqual
  
  10-11-2002 - settings
    [+] strWarningPREG
    [+] strHostAndGeo
    [+] strRemoteHost
    [+] strLogHostnameOrIP
    [+] strLogIPOnly
    [+] strLogIP
    [u] strUpdateSuccess
    [u] strSystemNeedsUpgrade
    [u] strReverseLookup
    [u] strProxyLookup
    [u] strCompactStats
    [u] strLogAdviews
    [u] strLogAdclicks
    [u] strLogSource
    [u] strLogBeacon
    [u] strIgnoreHosts
    [u] strBlockAdviews
    [u] strBlockAdclicks

  06-11-2002 - settings
    [+] strWarningTrackVars

  06-11-2002 - default
    [u] strZoneAppend
    [+] strZoneAppendType
    [+] strZoneAppendHTMLCode
    [+] strZoneAppendZoneSelection
    [+] strZoneAppendSelectZone

  29-10-2002 - settings
    [u] strUseAcl
    [+] strDeliverySettings
    [+] strCacheType
    [+] strCacheFiles
    [+] strCacheDatabase
    [+] strCacheShmop
    [u] strUseConditionalKeys
    [u] strUseMultipleKeys

  27-10-2002 - maintenance
    [-] strZoneCache
    [-] strRebuildZoneCache
    [-] strZoneCacheExplaination
    [+] strCache
    [+] strRebuildDeliveryCache
    [+] strDeliveryCacheExplaination
    [+] strDeliveryCacheSharedMem
    [+] strDeliveryCacheDatabase

  23-10-2002 - maintenance
    [+] strNotAbleToCheck
    [+] strForUpdatesLookOnWebsite
    [+] strClickToVisitWebsite

  23-10-2002 - invocation
    [+] strSmoothMovement
    [+] strHideNotMoving
    [+] strHideDelay
    [+] strHideTransparancy

  23-10-2002 - default
    [u] strSearch
    [u] strExpandAll
    [u] strCollapseAll
    [+] strPrevious_Key