@@ -25,7 +25,7 @@ English
 	---------------------------------------------------------
 	Maintained by:	   Niels Leenheer (niels@creatype.nl)
 	Is up-to-date?	   Always
-	Last update:	   10 November 2002
+	Last update:	   22 November 2002
 	Translated files:  7
 	---------------------------------------------------------
 
@@ -64,7 +64,7 @@ Hungarian
 Italian
 	---------------------------------------------------------
 	Maintained by:	   Matteo Beccati (matteo@beccati.com)
-	Is up-to-date?	   Yes
+	Is up-to-date?	   No
 	Last update:	   12 November 2002
 	Translated files:  7
 	---------------------------------------------------------
